:sparkles: Agregar suma y resta.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <input type="text" value="5">
+    <button>+</button>
+    <button>-</button>
   </body>
 </html>
